test/files/run/invalid-lubs.check

scala> def foo(a: Boolean, b: List[Any], c: collection.mutable.ListBuffer[Any]) = if (a) b else c
           ^
       error: kinds of the type arguments (Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Any]]]) do not conform to the expected kinds of the type parameters (type A,type CC,type C) in trait StrictOptimizedSeqOps.
       scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]]'s type parameters do not match type CC's expected parameters:
       <refinement of Int => A with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]]> has no type parameters, but type CC has one

scala> List(List[Any](), collection.mutable.ListBuffer[Any]())
                     ^
       error: type mismatch;
        found   : List[Any]
        required: scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Any]]]]
                                                           ^
       error: type mismatch;
        found   : scala.collection.mutable.ListBuffer[Any]
        required: scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Any]]]]

scala> List(List(), collection.mutable.ListBuffer())
                ^
       error: type mismatch;
        found   : List[Nothing]
        required: scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Nothing]]]]
                                                 ^
       error: type mismatch;
        found   : scala.collection.mutable.ListBuffer[Nothing]
        required: scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Nothing]]]]

scala> List(List(), Vector())
                ^
       error: type mismatch;
        found   : List[Nothing]
        required: scala.collection.immutable.AbstractSeq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.AbstractSeq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq,Serializable with Equals],scala.collection.immutable.AbstractSeq[Any] with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq,Serializable with Equals]],scala.collection.immutable.AbstractSeq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.AbstractSeq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq,Serializable with Equals],scala.collection.immutable.AbstractSeq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.AbstractSeq,scala.collection.immutable.AbstractSeq[Nothing]]]]
                          ^
       error: type mismatch;
        found   : scala.collection.immutable.Vector[Nothing]
        required: scala.collection.immutable.AbstractSeq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.AbstractSeq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq,Serializable with Equals],scala.collection.immutable.AbstractSeq[Any] with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq,Serializable with Equals]],scala.collection.immutable.AbstractSeq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.AbstractSeq with scala.collection.immutable.StrictOptimizedSeqOps[Any,scala.collection.immutable.AbstractSeq,Serializable with Equals],scala.collection.immutable.AbstractSeq[Nothing] with scala.collection.immutable.StrictOptimizedSeqOps[Nothing,scala.collection.immutable.AbstractSeq,scala.collection.immutable.AbstractSeq[Nothing]]]]

scala> List(collection.mutable.Queue(), List())
                                    ^
       error: type mismatch;
        found   : scala.collection.mutable.Queue[Nothing]
        required: scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Nothing]]]]
                                            ^
       error: type mismatch;
        found   : List[Nothing]
        required: scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Any] with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals]],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq with scala.collection.StrictOptimizedSeqOps[Any,scala.collection.AbstractSeq,Serializable with Equals],scala.collection.AbstractSeq[Nothing] with scala.collection.StrictOptimizedSeqOps[Nothing,scala.collection.AbstractSeq,scala.collection.AbstractSeq[Nothing]]]]

scala> :quit
